--- a/.gitignore
+++ b/.gitignore
@@ -35,6 +35,7 @@ ENV/
 # Environment variables
 .env
 .env.local
+.envrc
 
 # Test coverage
 .coverage
@@ -46,7 +47,10 @@ htmlcov/
 .dmypy.json
 dmypy.json
 
-# Agent logs and runtime data
+# ruff
+.ruff_cache/
+
+# Agent logs
 agno_handler.log
 tmp/
 *.db
