🚧 chore: update project structure and development tooling
- Add new Claude command and skill creator infrastructure
- Update pre-commit configuration
- Modify Makefile for improved developer experience
- Update project configuration files
- Add new OParl lite agent implementation
- Clean up and reorganize project files

Signed-off-by: Christoph Görn <goern@b4mad.net>

--- a/src/agentllm/proxy_config.yaml
+++ b/src/agentllm/proxy_config.yaml
@@ -2,6 +2,13 @@
 # This configuration exposes Agno agents as OpenAI-compatible models
 
 model_list:
+  - model_name: agno/oparl-topic-summary
+    litellm_params:
+      model: agno/oparl-topic-summary
+      custom_llm_provider: agno
+    model_info:
+      description: "Summarizes topics from OParl documents"
+      mode: chat
   - model_name: agno/release-manager
     litellm_params:
       model: agno/release-manager
@@ -23,13 +30,14 @@ model_list:
     litellm_params:
       model: gemini/gemini-2.5-flash
       api_key: os.environ/GEMINI_API_KEY
+      custom_llm_provider: agno
     model_info:
       description: "Google Gemini 2.5 Flash - Fast and efficient"
       mode: chat
 
 # General configuration
 general_settings:
-  master_key: "sk-agno-test-key-12345"  # Change this in production!
+  master_key: "sk-agno-test-key-12345" # Change this in production!
 
   # Map OpenWebUI headers to LiteLLM user tracking
   # Enable ENABLE_FORWARD_USER_INFO_HEADERS=true in OpenWebUI
@@ -41,8 +49,8 @@ general_settings:
       litellm_user_role: customer
 
 litellm_settings:
-  drop_params: true  # Drop unsupported params instead of erroring
-  set_verbose: false  # Disable verbose logging
+  drop_params: true # Drop unsupported params instead of erroring
+  set_verbose: false # Disable verbose logging
   json_logs: false
   # Redirect LiteLLM logs to file
   success_callback: []
@@ -56,6 +64,5 @@ litellm_settings:
 server:
   host: 0.0.0.0
   port: 8890
-
 # Environment variables needed
 # OPENAI_API_KEY or other LLM provider keys for the underlying Agno agents
