--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -14,7 +14,7 @@ repos:
       - id: check-yaml
       - id: check-toml
       - id: check-added-large-files
-        args: ['--maxkb=1000']  # Allow test cassettes up to 1MB
+        args: ["--maxkb=1000"] # Allow test cassettes up to 1MB
       - id: check-merge-conflict
       - id: check-json
 
