--- a/manifests/environment/stage/secret.enc.yaml
+++ b/manifests/environment/stage/secret.enc.yaml
@@ -8,14 +8,16 @@ type: Opaque
 stringData:
     ANTHROPIC_API_KEY: ENC[AES256_GCM,data:9W2ULoc22Xcao1j4zpjv0u5vIQhSKq9Y7wXiiwJsFyMJnDUwlgScZhjkR93KjPpkg/q+ceIoG1etyqAFjm9O/bUgxgx6TuIs6c4/4YZ67Q6fQ8+dfn32QVGuLeJ+vMm93gbEvztrEFktuwit,iv:UyJMWzZ/U4HNgHxTCmW0VbHnHwFFMWMnQ+sPGzOHPuE=,tag:0aEWO0fRnb+p1FOvRAkFzw==,type:str]
     OPENROUTER_API_KEY: ENC[AES256_GCM,data:R7yaSRyyZgCciWsK3xCMTmXY6Ezw8OU5bsbtusvvGg/HxqHweXeqNWLnYbCOsJ+JFiK0UqFvR3uuB3HoxQ5GqTyEtjak8+/8yA==,iv:m2b8K/1Ir452PlYcl2K9GFusidcQyydJM4763nzCoyY=,tag:n+mLo6cAg1eM5BXTur4CxA==,type:str]
+    LITELLM_API_KEY: ENC[AES256_GCM,data:9/12Y2sMm9QnMAYDDrmJWxxbuWVXSQ==,iv:aVEKmTKfdWYM4vlzluZyMKjQMSWkB95yi5R/g9ZSPDc=,tag:mwHlk6jDVJgsIDhOZ7TdEA==,type:str]
+    LITELLM_API_KEY_BEARER: ENC[AES256_GCM,data:7S4+93/kfPT2xAQowNjjWHRMThIs3limO/7TFc0=,iv:grVzscyC65Aq8cnQH7DJFT9ZD9kWftvJ17RlCdN0b0M=,tag:t+NYFPBL7V7jKLG8zuTxqQ==,type:str]
 sops:
     kms: []
     gcp_kms: []
     azure_kv: []
     hc_vault: []
     age: []
-    lastmodified: "2025-11-09T10:46:13Z"
-    mac: ENC[AES256_GCM,data:gN+SMLIZPWyiTZfSRd15Ei/0Z+IEi6//qcKjte63eAzHpBlHR8ePlsHlwWI7JTklqum1gstA0RtZDspUtLujNajIuG442UTt/oK320XBvngY7pQRRZ4Qnv+lk+MXXeHNprMYiBCXQOGF0hYGKnYnr2SYQIbjc1Qman4ysPjpo7g=,iv:Be6F/LjmAqnjE1qO1E9LskvaNfhgwVahTjt+IBir8+M=,tag:ZNcIl3sVXy66o2BrVQFRhA==,type:str]
+    lastmodified: "2025-11-09T12:34:58Z"
+    mac: ENC[AES256_GCM,data:RAqhY8sJuSn5aG93X1jQzVaYJswlqiTCyC9UTlALiZMvCgLnVH4l8fiNRIScaxiAzubfinSoMGq48EmuGvbpzBA44POT/YiopGNtiPBp6+4GxwCmEMQ03u5vXtOL8uBRkrmd22f/l6YmhTuXF8UguVm+u+W68YwpJxogJfvMqAE=,iv:rvxgjOio7/mUbYGXlQghwBLmtsjt3StqAGDPTkNW08M=,tag:rYHg+CUDM17BKKm/+2hDOQ==,type:str]
     pgp:
         - created_at: "2025-11-09T10:45:29Z"
           enc: |-
