--- a/src/agentllm/proxy_config.yaml
+++ b/src/agentllm/proxy_config.yaml
@@ -58,7 +58,7 @@ litellm_settings:
   # Register custom Agno provider handler
   custom_provider_map:
     - provider: "agno"
-      custom_handler: agentllm.custom_handler.agno_handler
+      custom_handler: custom_handler.agno_handler
 
 # Server settings
 server:
