--- a/manifests/open-webui/persistent_volume_claim.yaml
+++ b/manifests/open-webui/persistent_volume_claim.yaml
@@ -1,7 +1,7 @@
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
-  name: openwebui-data
+  name: open-webui-data
 spec:
   accessModes:
     - ReadWriteOnce
