--- a/manifests/open-webui/service.yaml
+++ b/manifests/open-webui/service.yaml
@@ -1,14 +1,10 @@
 kind: Service
 apiVersion: v1
 metadata:
-  name: openwebui
-  labels:
-    app: openwebui
+  name: open-webui
 spec:
   ports:
     - name: http
       protocol: TCP
       port: 8080
       targetPort: 8080
-  selector:
-    app: openwebui
