--- a/proxy_config.yaml
+++ b/proxy_config.yaml
@@ -34,6 +34,14 @@ model_list:
       description: "GitHub PR Prioritization - Multi-factor scoring and intelligent review queue management"
       mode: chat
 
+  - model_name: agno/rhdh-tester
+    litellm_params:
+      model: agno/rhdh-tester
+      custom_llm_provider: agno
+    model_info:
+      description: "RHDH Tester - Creates and configures Red Hat Developer Hub test instances"
+      mode: chat
+
   # Google Gemini 2.5 models
   - model_name: gemini-2.5-pro
     litellm_params:
@@ -50,6 +58,15 @@ model_list:
     model_info:
       description: "Google Gemini 2.5 Flash - Fast and efficient"
       mode: chat
+
+  - model_name: gemini-3-pro-preview
+    litellm_params:
+      model: gemini/gemini-3-pro-preview
+      api_key: os.environ/GEMINI_API_KEY
+    model_info:
+      description: "Google Gemini 3 Pro Preview - Most capable model"
+      mode: chat
+
 
 # General configuration
 general_settings:
