--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ demo-agent = "agentllm.agents.demo_agent:DemoAgentFactory"
 release-manager = "agentllm.agents.release_manager:ReleaseManagerFactory"
 rhai-roadmap-publisher = "agentllm.agents.rhai_roadmap_publisher:RHAIRoadmapPublisherFactory"
 github-pr-prioritization = "agentllm.agents.github_pr_prioritization_agent:GitHubReviewAgentFactory"
+rhdh-tester = "agentllm.agents.rhdh_tester:RHDHTesterFactory"
 
 [build-system]
 build-backend = "hatchling.build"
