✨ feat: add RHDH Store Manager agent with RAG knowledge base
Introduces a comprehensive agent for Red Hat Developer Hub's plugin ecosystem management with extensive knowledge base integration and Jira toolkit support.

Features:
- Store Manager agent with 8 core use cases (discovery, migration, certification, lifecycle, support, releases, metadata, coordination)
- RAG knowledge base with 24 files (9 MD, 1 PDF, 14 CSV) covering plugin documentation, catalogs, and release schedules
- Jira toolkit integration for real-time issue tracking (RHIDP, RHDHPLAN projects)
- Comprehensive test suite with 10 validation scenarios covering knowledge retrieval, CSV parsing, and Jira integration
- Detailed documentation with 58+ test questions and testing guide

Technical implementation:
- AgentConfigurator pattern with JiraToolkitConfig for token management
- Knowledge base auto-loading via _get_knowledge_config()
- Hybrid search (vector + keyword) with LanceDB persistence
- Plugin system registration via pyproject.toml entry point

Documentation:
- docs/agents/store-manager.md - Agent overview and capabilities
- docs/agents/store-manager-test-questions.md - 58+ test questions across 8 use cases
- docs/agents/store-manager-comprehensive-test.md - Test execution guide
- docs/testing-guide.md - General testing best practices

Configuration:
- STORE_MANAGER_JIRA_API_TOKEN environment variable for Jira access
- knowledge/ directory added to .gitignore for local knowledge bases

--- a/.env.secrets.template
+++ b/.env.secrets.template
@@ -220,3 +220,17 @@ WEBUI_SECRET_KEY=change-this-to-a-random-secret-key-for-production
 
 # Release Manager agent - Google Sheet ID for release data
 AGENTLLM_RHAI_ROADMAP_PUBLISHER_RELEASE_SHEET=your_google_sheet_url_here
+
+# Store Manager agent - Jira API token for read-only access
+# This token enables the Store Manager agent to search RHIDP and RHDHPLAN projects.
+# Access is read-only (search_issues, get_issue only - no write permissions).
+#
+# Setup:
+# 1. Go to https://issues.redhat.com (or your Jira instance)
+# 2. Click your profile icon → Account Settings → Security → API Tokens
+# 3. Create a new API token
+# 4. Copy the token and set it below
+#
+# Note: This is a shared token used by all users of the Store Manager agent.
+#       Ensure the token has appropriate read permissions for RHIDP and RHDHPLAN.
+STORE_MANAGER_JIRA_API_TOKEN=your_jira_api_token_here
