♻️ refactor: implement toolkit-based Release Manager with progressive testing pyramid
Replace fragile system prompt extension pattern with dedicated toolkit architecture:
- ReleaseManagerToolkit: 6 query methods for workbook sheets (queries, templates, workflows)
- ReleaseManagerToolkitConfig: Per-user workbook caching with Google Sheets API
- Progressive test pyramid: L0 unit tests (< 1s) → L1-L4 integration scenarios (30s-5min)

Key improvements:
- Deleted system_prompt_extension_config.py, replaced with maintainable toolkit pattern
- Added 605-line unit test suite for toolkit methods with mock data
- Enhanced test_release_manager_scenarios.py with complexity-based scenario structure
- Comprehensive documentation: workbook schema, usage guides, AGENTS.md updates

Testing strategy:
- Level 0: Toolkit unit tests (foundation, no APIs)
- Level 1-2: Basic/cross-toolkit integration
- Level 3-4: Workflows and advanced reasoning validation

Closes systematic debugging workflow with clear failure isolation strategy.

--- a/.env.secrets.template
+++ b/.env.secrets.template
@@ -156,17 +156,29 @@ GDRIVE_SERVICE_ACCOUNT_PATH=secrets/gdrive-service-account.json
 #       the agent can use both - OAuth for user documents, Service Account for shared docs.
 
 # ============================================================================
-# Release Manager Extended System Prompt (Optional)
+# Release Manager Workbook Configuration (Required for Release Manager)
 # ============================================================================
-# Google Doc URL or ID containing extended agent instructions
-# This supplements the embedded system prompt with dynamic operational content
-# (Jira query patterns, response templates, communication guidelines)
+# Google Sheets URL containing Release Manager configuration workbook
+# This workbook contains structured data including:
+# - Configuration & Setup
+# - Tools Reference
+# - Response Formats
+# - Jira Queries (JQL templates)
+# - Actions & Workflows
+# - Slack Templates (freeze announcements)
+# - Maintenance Guide
 #
-# Setup: Copy docs/templates/release_manager_system_prompt.md to a Google Drive document
-#        and set this variable to the document URL or ID
+# Setup: Create or copy the Release Manager workbook (Excel format exported to Google Sheets)
+#        and set this variable to the Google Sheets URL
 #
 # Requirements:
 # - User must have Google Drive configured (GDRIVE_CLIENT_ID/SECRET above)
+# - The workbook must be shared with the authenticated Google account
+# - Workbook must contain all 7 required sheets (see docs/templates/release_manager_sheet.md)
+#
+# Example:
+# RELEASE_MANAGER_WORKBOOK_GDRIVE_URL=https://docs.google.com/spreadsheets/d/YOUR_FILE_ID/edit
+RELEASE_MANAGER_WORKBOOK_GDRIVE_URL=
 
 # ============================================================================
 # Knowledge Base / RAG Vector Storage
@@ -178,7 +190,6 @@ GDRIVE_SERVICE_ACCOUNT_PATH=secrets/gdrive-service-account.json
 # Vector DB storage location uses: ${AGENTLLM_DATA_DIR}/lancedb
 # In containers: /app/tmp/lancedb
 # No environment variables needed for knowledge configuration.
-RELEASE_MANAGER_SYSTEM_PROMPT_GDRIVE_URL=
 
 # ============================================================================
 # RHDH Support Agent Extended System Prompt (Optional)
